# paper-plane

./: Cargo.toml  LICENSE  LICENSE_MIT  Trunk.toml  build.sh  index.html  readme.md
.github/workflows/: pages.yml
glsl/: background.f.glsl  background.v.glsl  cover.f.glsl  floor.f.glsl  floor.v.glsl  plane-line.f.glsl  plane-line.v.glsl  plane-triangle.f.glsl  plane-triangle.v.glsl
src/: background.rs  bezier.rs  bit_set.rs  camera.rs  cover.rs  flight.rs  floor.rs  fold.rs  lib.rs  main.rs  mix.rs  orientation.rs  path.rs  plane.rs  plane_geometry.rs  plane_orientation.rs  plane_program.rs  scene.rs  smooth.rs
src/model/: animated_model.rs  mod.rs  model.rs
src/model/transform/: add_lines.rs  fold.rs  mod.rs  rotate_x.rs  shift.rs  shift_all.rs  stay.rs  transform.rs  transform_parallel.rs
