[package]
name = "wasm-plane"
version = "0.1.0"
authors = ["Andrei Monkin <monkin.andrey@gmail.com>"]
edition = "2018"
license-file = "LICENSE_MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = "0.3"
js-sys = "0.3"
console_error_panic_hook = "0.1.7"
webgl-rc = { version = "0.1", features = ["nalgebra-glm"] }
nalgebra-glm = "0.19"
num-traits = "0.2"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
